[package]
name = "rpc-shield"
version = "0.1.0"
edition = "2021"
authors = ["CppNexus cppnexus@proton.me"]
description = "Rate Limiter / DDoS Filter для Web3 RPC Endpoint"
license = "MIT"

[features]
default = ["self-hosted"]
self-hosted = []
saas = ["sqlx", "stripe"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tower = { version = "0.5.3", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Rate limiting
governor = "0.10.4"
nonzero_ext = "0.3"

# Redis (optional for SaaS)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# Database (for SaaS mode)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"], optional = true }

# Authentication
jsonwebtoken = "10.3.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Stripe (for SaaS billing)
stripe = { version = "0.0.5", optional = true }

# Monitoring & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"

# Configuration
config = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (для проксирования к RPC node)
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
mockall = "0.14"
tempfile = "3.8"